10.Security/NetworkPolicies/v0.2/pod-frontend-testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: testpod
  name: testpod
  namespace: frontend
spec:
  containers:
  - args:
    - sh
    - -c
    - while true; do wget -qO - backend.backend.svc.cluster.local; sleep 1; done
    image: alpine
    name: testpod
